# ansible-playbill

./: .gitignore  .gitmodules  .oldsetup.gfc  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: build_and_publish.yaml
ansible_playbill/: __init__.py
ansible_playbill/test/: test_playbill.py
ansible_playbill/test/ansible/: play.test.yml
ansible_playbill/test/ansible/roles/test/tasks/: alt_one.yml  alt_two.yml  main.yml
ansible_playbill/test/ansible/roles/test_other/tasks/: alt_one.yml  alt_two.yml
playbill/: __init__.py
test/: test_playbill.py
test/ansible/roles/test_other/tasks/: main.yml
